Add network utility APIs
* Add a API to support network design
* Add a API to support network validation
* Update Swagger docs
* Update the existing netutil pkg and example
